# Email_Triage_OpenEnv

./: Dockerfile  Openenv.yaml  README.md  agent.py  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  q_agent.py  requirements.txt
server/: app.py
