[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv Email Triage Environment"
authors = [
    { name = "Pratham Shettigar" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
