[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

# 🔥 THIS SECTION MUST BE EXACT
[project.scripts]
server = "server.app:app"

# 🔥 ADD THIS (IMPORTANT FOR VALIDATOR)
[tool.openenv]
entrypoint = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"